app/styles/layout.styl
@import './settings'

// This stylesheet defines the layout
// for the kv diagram editor

*
  box-sizing border-box

body
  padding 0
  margin 0
  font-family font-sans
  background-color color-background-primary

a
button
  cursor pointer
  &:disabled
    cursor default

  &::-moz-focus-inner
    border: 0

button
input
textarea
select
  font-family inherit
  font-size 1em

.fake-table
  width 420px
  height 420px
  background-color grey

.fake-table-small
  width 100px
  height 100px
  background-color grey

plainlist(inline = false)
  list-style none
  margin 0
  padding 0
  if inline
    > *
      display inline-block

round()
  width button-size-small
  height button-size-small
  border-radius (button-size-small / 2)
  overflow hidden
  border 2px solid transparent
  font-size 0
  outline none

button(
  color-background = color-background-secondary-strong,
  color-foreground = color-foreground-secondary-strong
)
  line-height 1
  height button-size
  border 2px solid transparent
  vertical-align middle
  padding-top 0
  padding-bottom 0
  padding-right space(1)
  outline none
  background-color color-background
  color color-foreground
  padding-left space(1)

  &:not(.state-active)
    &:hover
      background-color lighten(color-background, 3%)
    &:focus
      border-color color-focus
    &:active
      background-color darken(color-background, 3%)


space(u)
  unit(15 * u, px)

.application
  font-size 11pt

$keyframe-name = slide-up
@keyframes {$keyframe-name}
  for i in 0..10
    {10% * i}
      transform scale((1 - i/10))
      opacity (1 - i/10)

.error-message
  position absolute
  top space(5)
  left 30%
  right 30%
  padding space(1)
  line-height (1.5*button-size)
  background-color alpha(color-danger, 75%)
  color #fff
  border 3px solid #fff
  font-weight 600
  text-align center
  z-index 100
  pointer-events none
  animation: slide-up 0.1s 2s 1 forwards

.app-head
  overflow visible
  background-color color-background-secondary

.app-body
  overflow hidden
  background-color color-background-primary

.edit-panel
  margin space(1) 0 0 space(2)
  float left

.spinner
  display inline-block
  clear both
  position relative
  padding space(0.5) space(0.5) space(0.5) space(1)
  margin-right space(0.5)
  background-color color-background-primary-weak
  color color-foreground-primary
  border 3px solid color-background-highlight
  transition border-color 0.3s 0.3s ease-out
  &.state-readonly
    border-color transparent
    transition-delay 0

.spinner-buttons
  transition opacity 0.3s ease-out
  transition-delay 0.3s

.spinner-label
  margin-right space(0.5)

.spinner-value
.spinner-label
  transition transform 0.2s ease-out
  transition-delay 0s

.spinner-label
.spinner-value
.spinner-buttons
  display inline-block
  line-height button-size-small
  height button-size-small
  vertical-align middle

.spinner-label::after
  content: ':'

.spinner-value
  font-size font-size-big
  font-weight font-bold
  min-width space(2)
  text-align center

.spinner-button
  round()
  background-color color-background-inverse
  vertical-align top
  background-size 45% 45%
  background-position 50% 50%
  background-repeat no-repeat
  margin 0 space(0.2)
  transition transform 0.3s ease-out, opacity 0.3s ease-out

  .icon-shape
    fill color-foreground-inverse

  &:hover
    background-color lighten(color-background-inverse, 3%)
  &:focus
    border-color color-focus
  &:active
    background-color darken(color-background-inverse, 3%)
  &:disabled
    pointer default
    background-color lighten(color-background-inverse, 25%)
    transform scale(0)
    opacity 0
    pointer-events none

.state-readonly
  .spinner-button
      pointer default
      background-color lighten(color-background-inverse, 25%)
      transform scale(0)
      opacity 0
      pointer-events none

.edit-mode-panel
  display block
  padding-bottom space(1)

.edit-mode-button-loops
.edit-mode-button-function
  button(
    color-background-inverse,
    color-foreground-inverse
  )
  opacity 0.7
  width 150px
  &.state-active
    cursor default
    opacity 1
    font-weight 600
    color tint(color-background-highlight, 40%)

.action-panel
  margin space(1) space(1.5) 0 0
  float right

.action-list
  plainlist(inline: true)

.action-list-item
  padding 0 space(0.2)

.action-button
  padding 0
  margin space(0.2)
  width 32px
  height 32px
  border none
  background-color transparent
  outline none

  .icon-shape
    transform-origin 50% 50%
    transform scale(0.95)
    fill color-background-secondary-strong

  &:focus
    .icon-shape
      stroke color-focus
      stroke-width 1px

.svg-icon
  display inline-block
  margin 0
  width 100%
  height 100%
  outline none
  &:hover
    opacity 0.8
  &:active
    opacity 1

.output-panel
  padding space(2) space(1.5) 0
  clear both

.output-button-add
  outline none
  border 5px solid color-background-primary
  vertical-align top
  background-color color-background-highlight
  color color-foreground-highlight
  width space(3)
  height space(3)
  overflow hidden
  margin space(1.5) space(1)
  background-size 50% 50%
  background-position 50% 50%
  background-repeat no-repeat
  transition transform 0.3s ease-out, opacity 0.3s ease-out

  .icon-shape
    fill color-foreground-inverse

  &:hover
    background-color tint(color-background-highlight, 10%)
  &:focus
    border-color color-focus

  &:active
    background-color tint(color-background-highlight, 20%)

  &:disabled
    transform scale(0)
    opacity 0
    pointer-events none
    cursor default

.output-list
  plainlist(inline: true)
  display inline-block
  vertical-align bottom

  > .output-list-item
    display block
    float left
    overflow visible

.output-list-item
  position relative
  margin 0 space(0.5)
  cursor pointer
  outline none
  border 3px solid color-background-secondary
  border-bottom-width 0

  &.state-current
    background-color color-background-primary
    font-weight font-bold
    cursor default
    > .output-thumbnail
      background-color inherit

  &:focus
    border-color color-focus

.output-thumbnail
  background-color color-background-primary-weak
  padding 4px
  overflow hidden
  display flex
  align-items center
  justify-content center
  min-width space(5)
  min-height space(5)

  > *
    margin 0 auto

.output-button-delete
  round()
  border-width 3px
  position absolute
  top -12px
  right -12px
  z-index 10
  border-color color-background-secondary
  background-color color-danger
  background-size 50% 50%
  background-position 50% 50%
  background-repeat no-repeat
  transition transform 0.3s ease-out, opacity 0.3s ease-out

  .icon-shape
    fill tint(color-danger, 90%)

  &:hover
    background-color lighten(color-danger, 5%)
  &:focus
    border-color color-focus

  &:active
    background-color darken(color-danger, 10%)
    .icon-shape
      fill white

  &:disabled
    transform scale(0)
    opacity 0
    pointer-events none
    cursor default

.output-label
  display block
  height button-size
  line-height button-size
  text-align center
  padding 0 1em
  margin 0
  border none
  outline none
  background-color transparent
  clear both
  overflow hidden

  &.state-editable
    cursor text
    color darken(color-background-highlight, 20%)
    text-decoration underline

.output-label-edit
  display block
  white-space nowrap
  text-align center
  border none
  outline 1px solid grey
  margin space(0.25) 0 0
  height (button-size - space(0.5))
  line-height (button-size - space(0.5))
  background-color color-background-primary
  max-width 10em
  overflow hidden
  text-decoration none
  &:focus
    outline-color color-focus

  &.state-invalid
    outline-color color-danger
    background-color tint(#f00, 90%)

.loop-bar
  margin space(2)
  padding space(0.5)
  background-color color-background-inverse

  > .loop-list
    transition opacity 0.1s linear

  &.state-faded
    opacity 0.6
    > .loop-list
      opacity 0.7

.loop-mode-switch
  border 1px solid tint(color-background-inverse-weak, 20%)
  vertical-align middle
  display inline-block
  margin-right space(0.5)

.loop-mode-options
  plainlist(inline: true)

.loop-mode
  button(
    color-background-inverse-weak,
    color-foreground-inverse-weak
  )

  &.state-active
    cursor default
    font-weight font-bold
    background-color color-background-inverse-strong
    color color-foreground-inverse-strong
    pointer default

    &:hover
      color color-foreground-inverse-strong
      background-color lighten(color-background-inverse-strong, 1%)
    &:focus
      border-color color-focus

    &:active
      background-color color-background-inverse-strong


  &:hover
    color lighten(color-foreground-inverse-weak, 50%)
    background-color lighten(color-background-inverse-weak, 1%)
  &:focus
    border-color color-focus

  &:active
    color #fff
    background-color darken(color-background-inverse-weak, 10%)


.loop-list
  plainlist(inline: true)
  display inline-block
  vertical-align middle
  padding 0

.loop-list-item
  padding space(0.1)
.loop-list-item-empty
  color darken(color-foreground-secondary, 40%)
  padding 0 space(0.5)

.loop-icon
  width button-size-small
  height button-size-small
  vertical-align middle
  display inline-block

.loop-button-delete
  round()
  border-radius 0
  vertical-align middle
  background-color transparent
  border 3px solid transparent
  background-size 50%
  background-position 50% 50%
  background-repeat no-repeat

  &:focus
    border-color color-focus

  &:active
    background-color rgba(0,0,0,0.2)

  &:disabled
    cursor default
    opacity 0

.diagram-scroller
  max-width 100%
  overflow auto

.diagram-scroller-body
  display flex
  align-items center
  justify-content center
  min-width min-content
  min-height min-content
  padding space(2) 0

.export-text
  white-space pre
  word-wrap normal
  font-family monospace
  font-size 14px
  line-height 1.3
  display block
  width 100%
  max-width 100%
  padding 0.5em
  min-height 15em
  outline none
  border 2px solid color-background-secondary

.export-text-single
  width 100%
  white-space pre
  word-wrap normal
  font-family monospace
  font-size 14px
  line-height 1.3
  padding 0.5em
  outline none
  border 2px solid color-background-secondary

.block-list
  list-style none
  margin 0
  padding 0

  &.style-small
    max-height 200px
    overflow-y auto
    border 2px solid color-background-inverse-weak
    padding space(0.3)

  > li
    display block
    padding space(0.2) 0

.block-button
  display block
  text-align left
  width 100%
  border 3px solid transparent
  outline none
  padding (button-size / 4)
  line-height (button-size / 2)
  background-color color-background-primary-weak
  color color-foreground-primary
  cursor pointer
  transition background-color 0.1s 0s ease-out

  &:hover
    background-color lighten(color-background-primary-weak, 15%)
  &:active
    background-color darken(color-background-primary-weak, 5%)
  &:focus
    border-color color-focus

.block-button-dark
  margin space(0.5)
  display block
  text-align left
  border 3px solid transparent
  outline none
  padding (button-size / 8)
  line-height (button-size / 2)
  background-color color-background-inverse-weak
  color color-foreground-inverse
  cursor pointer
  transition background-color 0.1s 0s ease-out

  &:hover
    background-color lighten(color-background-inverse-weak, 15%)
  &:active
    background-color darken(color-background-inverse-weak, 5%)
  &:focus
    border-color color-focus

